--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "dateparser>=1.2.2",
     "faster-whisper>=1.2.0",
     "flask>=2.1",
     "flask-cors>=6.0.1",
@@ -12,5 +13,6 @@ dependencies = [
     "llama-cpp-python>=0.3.16",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.43",
+    "tiktoken>=0.12.0",
     "werkzeug>=3.1.3",
 ]
