--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,13 @@ dependencies = [
     "flask-cors>=6.0.1",
     "flask-sqlalchemy>=3.1.1",
     "llama-cpp-python>=0.3.16",
+    "pyannote-audio>=3.1.0",
+    "python-docx>=1.1.0",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.43",
     "tiktoken>=0.12.0",
+    "torch>=2.0.0",
+    "torchaudio>=2.0.0",
     "werkzeug>=3.1.3",
+    "whisperx>=3.1.1",
 ]
