--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ faster-whisper
 llama-cpp-python
 tiktoken
 dateparser
+whisperx>=3.1.1
+pyannote.audio>=3.1.0
+torch>=2.0.0
+torchaudio>=2.0.0
+python-docx>=1.1.0
